PXP-4931 Handle multiple IDPs + unit tests (#19)
